test/cli/test/limit-configmap-for-sa/kyverno-test.yaml
name: limit-configmap-for-sa
policies:
- limit_configmap_for_sa.yaml
resources:
- resource.yaml
results:
- kind: ConfigMap
  policy: limit-configmap-for-sa
  resources:
  - any-namespace/any-configmap-name-bad
  result: skip
  rule: limit-configmap-for-sa-developer
- kind: ConfigMap
  policy: limit-configmap-for-sa
  resources:
  - any-namespace/any-configmap-name-good
  result: fail
  rule: limit-configmap-for-sa-developer
variables: variables.yaml
