test/cli/test/limit-configmap-for-sa/resource.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: any-configmap-name-good
  namespace: any-namespace
data:
  key: value

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: any-configmap-name-bad
  namespace: any-namespace
data:
  key: value
