test/cli/test/limit-configmap-for-sa/user_info.yaml
subject:
- kind: ServiceAccount
  name: another-developer
  namespace: another-namespace
