test/cli/test/limit-configmap-for-sa/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: limit-configmap-for-sa
  resources:
  - name: any-configmap-name-good
    values:
      request.operation: UPDATE
  - name: any-configmap-name-bad
    values:
      request.operation: UPDATE
